--- a/package.json
+++ b/package.json
@@ -13,21 +13,28 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "lint": "eslint app/",
+    "lint:fix": "eslint app/ --fix"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^4.0.0",
+    "babel-eslint": "^7.2.3",
     "color": "^1.0.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "expo": "^17.0.0",
-    "lottie-react-native": "^1.1.1",
     "moment": "^2.18.1",
+    "prettier": "^1.3.1",
+    "prettier-eslint": "^6.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
-    "react-native-branch": "^2.0.0-beta.3",
-    "react-native-extended-stylesheet": "^0.4.0",
-    "react-native-maps": "^0.14.0"
+    "react-native-extended-stylesheet": "^0.4.0"
   }
 }
