--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "0.0.31",
     "jest-expo": "~1.0.1",
     "react-test-renderer": "16.0.0-alpha.6"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
     "lint": "eslint app/",
     "lint:fix": "eslint app/ --fix"
@@ -29,7 +26,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "expo": "^17.0.0",
     "moment": "^2.18.1",
     "prettier": "^1.3.1",
     "prettier-eslint": "^6.2.0",
