--- a/.gitignore
+++ b/.gitignore
@@ -47,14 +47,12 @@ buck-out
 bin/
 gen/
 out/
-.gradle/
-/android/gradle
 /android/keystores
 build/
 /build
-gradlew*
-gradle.xml
-/local.properties
+/android/local.properties
+/android/.gradle
+.gradle/
 proguard/
 /proguard
 *.log
@@ -65,7 +63,6 @@ captures/
 .idea/
 .DS_Store
 *.jks
-gradle.properties
 
 # Node
 node_modules
