--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,16 @@ machine:
     version: oraclejdk8
 dependencies:
   pre:
-    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
+    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.3,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
+  post:
+    - cd android && ./gradlew assembleDebug
+    - cd android && ./gradlew assembleDebugAndroidTest
   cache_directories:
     - /usr/local/android-sdk-linux/platforms/android-25
-    - /usr/local/android-sdk-linux/build-tools/25.0.2
+    - /usr/local/android-sdk-linux/build-tools/25.0.3
     - /usr/local/android-sdk-linux/extras/android/m2repository
+    - ~/android
+    - ~/.android
+deployment:
+  androidStaging:
+    branch: 0.1.0-circleci
