--- a/circle.yml
+++ b/circle.yml
@@ -9,18 +9,20 @@ machine:
     version: 6.1.0
   java:
     version: oraclejdk8
+
 dependencies:
-  pre:
-    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.3,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
-  post:
-    - cd android && ./gradlew assembleDebug
-    - cd android && ./gradlew assembleDebugAndroidTest
   cache_directories:
     - /usr/local/android-sdk-linux/platforms/android-25
     - /usr/local/android-sdk-linux/build-tools/25.0.3
     - /usr/local/android-sdk-linux/extras/android/m2repository
     - ~/android
     - ~/.android
-deployment:
-  androidStaging:
-    branch: 0.1.0-circleci
+  pre:
+    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.3,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
+    - gem install fastlane
+  post:
+    - fastlane beta
+
+test:
+  override:
+    - "true"
