--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ dependencies:
     - ~/android
     - ~/.android
   pre:
-    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.3,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
+    - ./circle_dependencies.sh
     - gem install fastlane
   post:
     - fastlane beta
