--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,14 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        release {
+            storeFile file(System.getenv("ANDROID_KEYSTORE_FILE"))
+            storePassword System.getenv("ANDROID_KEYSTORE_PWD")
+            keyAlias System.getenv("ANDROID_KEY_ALIAS_RELEASE")
+            keyPassword System.getenv("ANDROID_KEYSTORE_RELEASE_PWD")
+        }
+    }
     splits {
         abi {
             reset()
@@ -111,6 +119,7 @@ android {
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
