--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: "com.android.application"
 apply plugin: 'io.fabric'
+apply from: "$rootProject.projectDir/buildsystem/config.gradle"
+apply from: "$rootProject.projectDir/buildsystem/library.gradle"
+
+def configuration = ext.configuration;
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -88,15 +92,15 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion configuration.compileSdk
+    buildToolsVersion configuration.buildTools
 
     defaultConfig {
-        applicationId "com.yemenportalmobile"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        applicationId configuration.applicationId
+        minSdkVersion configuration.minimumSdk
+        targetSdkVersion configuration.targetSdk
+        versionCode buildVersionCode()
+        versionName buildVersionName()
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -138,9 +142,9 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:25.3.0"
-    compile "com.facebook.react:react-native:+"
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    compile "${library.support_compat}"
+    compile "${library.react}"
+    compile("${library.crashlytics}") {
         transitive = true;
     }
 }
