Setup Fabric inside the app
Follow guide
https://facebook.github.io/react-native/docs/native-modules-ios.html#content
to use native modules in react native app.

--- a/ios/yemenportalmobile/Info.plist
+++ b/ios/yemenportalmobile/Info.plist
@@ -62,5 +62,19 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>Fabric</key>
+  <dict>
+    <key>APIKey</key>
+    <string>5768db8cf56848f565e4cfc8e5ac02bd933f1930</string>
+    <key>Kits</key>
+    <array>
+      <dict>
+        <key>KitInfo</key>
+        <dict/>
+        <key>KitName</key>
+        <string>Crashlytics</string>
+      </dict>
+    </array>
+  </dict>
 </dict>
 </plist>
