--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-native-extended-stylesheet": "^0.4.0",
+    "react-native-onesignal": "^3.0.4",
     "react-native-wkwebview-reborn": "^1.6.0"
   }
 }
