--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,9 +110,9 @@ android {
         } else {
             def onesignalPropertiesFile= rootProject.file("keystores/" + "onesignal.properties")
             def onesignalProperties = new Properties()
-            keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+            onesignalProperties.load(new FileInputStream(onesignalPropertiesFile))
             manifestPlaceholders = [onesignal_app_id: onesignalProperties['onesignal.app.id'],
-                                    onesignal_google_project_number: onesignalProperties['onesignal.google.project.number']]
+                                    onesignal_google_project_number: 'onesignal.google.project.number']
         }
     }
     signingConfigs {
