Update Android version build release config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,12 +84,12 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion configuration.compileSdk
@@ -101,6 +101,8 @@ android {
         targetSdkVersion configuration.targetSdk
         versionCode buildVersionCode()
         versionName buildVersionName()
+        resConfigs "ar"
+        setProperty("archivesBaseName", "YemenPortal-$versionName")
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -139,7 +141,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false
+            universalApk true
             include "armeabi-v7a", "x86"
         }
     }
@@ -147,6 +149,8 @@ android {
         release {
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources enableProguardInReleaseBuilds
+            zipAlignEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
